randomizing monsters now works

--- a/memorygame.html
+++ b/memorygame.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div ng-app="memory" ng-controller="MemoryController">
-
+      <h1>{{message}}</h1>
       <table>
         <tbody>
           <tr ng-repeat="row in grid">
