--- a/memorygame.html
+++ b/memorygame.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Memory Game</title>
     <link rel="stylesheet" href="style.css">
     <script src="angular.js"></script>
     <script src="memory.js"></script>
-  </head>
-  <body>
+</head>
+
+<body>
     <div ng-app="memory" ng-controller="MemoryController">
-      <h1>{{message}}</h1>
-      <table>
-        <tbody>
-          <tr ng-repeat="row in grid">
-            <td ng-repeat="card in row">
-              <img ng-show="card.open" ng-src="{{card.url}}"/> <!-- monster -->
-              <img ng-click="flip(card)" ng-hide="card.open" src="images/logo.png"/> <!-- logo -->
-            </td>
-          </tr>
-        </tbody>
-      </table>
+        <div ng-show="menu">
+            <button ng-click="gameMode('easy')" type="button">Easy</button>
+            <button ng-click="gameMode('medium')" type="button">Medium</button>
+            <button ng-click="gameMode('hard')" type="button">Hard</button>
+        </div>
+        <div ng-hide="menu">
+            <h1>{{message}}</h1>
+            <table>
+                <tbody>
+                    <tr ng-repeat="row in grid">
+                        <td ng-repeat="card in row">
+                            <img ng-show="card.open" ng-src="{{card.url}}" />
+                            <!-- monster -->
+                            <img ng-click="isDisabled || flip(card)" ng-hide="card.open" src="images/logo.png" />
+                            <!-- logo -->
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 
 
 
-  </body>
+</body>
 
 </html>
